# city-builder-game

./: LICENSE  README.md
backend/: CMakeLists.txt
backend/include/: Airport.h  Building.h  City.h  CityObject.h  Commercial.h  IndoorRecreation.h  Industrial.h  OutdoorRecreation.h  RailwayStation.h  Recreation.h  Residential.h  Road.h  Transport.h  Utility.h
backend/src/: Airport.cpp  Building.cpp  City.cpp  CityObject.cpp  Commercial.cpp  IndoorRecreation.cpp  Indsutrial.cpp  OutdoorRecreation.cpp  RailwayStation.cpp  Recreation.cpp  Residential.cpp  Road.cpp  Transport.cpp  Utility.cpp  bindings.cpp  main.cpp
frontend/: city_engine.cp311-win_amd64.pyd  city_engine.pyd  main.py  test_bridge.py
